fix: correct code block indention

--- a/browser/style.css
+++ b/browser/style.css
@@ -42,7 +42,7 @@ body {
   --color-table-head: #ff7e00;
 }
 
-code {
+code:not([class*="language-"]) {
   padding: .2em .4em;
   margin: 0;
   font-size: 85%;
