fix: style `small` tag

--- a/browser/style.css
+++ b/browser/style.css
@@ -14,6 +14,7 @@ body {
   --font-size-h4: 1.1em;
   --font-size-default: 3.5em;
   --font-size-small: .4em;
+  --font-size-smaller: .7em;
 
   --font-size-default-print: 2.5em;
 
@@ -148,6 +149,10 @@ li + li {
 
 a {
   color: var(--color-link);
+}
+
+small {
+  font-size: var(--font-size-smaller);
 }
 
 em {
